--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-torch
-nltk
+torch ~=2.1.1
+nltk~=3.8.1
 torchtext==0.6.0
 pyvi
 spacy
 PyYAML==5.4.1
-dill
-pandas
+dill~=0.3.7
+pandas~=2.0.3
+numpy~=1.24.4
